<resources>
    <string name="app_name">Notty</string>
    <string name="logo_description">The logo of the app</string>
    <string name="forget_password">Forget password?</string>
    <string name="new_here_sign_up">New here? Sign up</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">sign in with Facebook</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_toggle_description">Show password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? Login here</string>
</resources>
